# LightningSearch

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: CopyQtDependencies.cmake  CopyWinPlatformPlugin.cmake
docs/: planning.md  searchlib.md  style.md
program/: CMakeLists.txt
program/include/ui/: CFilterBuildWidget.hpp  CFilterContentsWidget.hpp  CFilterListModel.hpp  CFilterListWidget.hpp  CFilterNameWidget.hpp  CFolderListWidget.hpp  CMainWindow.hpp  CSearchResultModel.hpp  CStartSearchDialog.hpp  IFilterWidget.hpp
program/src/: main.cpp
program/src/ui/: CFilterBuildWidget.cpp  CFilterContentsWidget.cpp  CFilterListModel.cpp  CFilterListWidget.cpp  CFilterNameWidget.cpp  CFolderListWidget.cpp  CMainWindow.cpp  CSearchResultModel.cpp  CStartSearchDialog.cpp  IFilterWidget.cpp
searchlib/: CMakeLists.txt
searchlib/include/: CThreadPool.hpp  StringUtil.hpp
searchlib/include/search/: CFilterCombine.hpp  CFilterContents.hpp  CFilterName.hpp  CSearchEngine.hpp  CSearchQuery.hpp  CStreamRegexSearcher.hpp  CStreamSearcher.hpp  IFilter.hpp  ISearchObserver.hpp  IStreamSearcher.hpp
searchlib/src/search/: CFilterContents.cpp  CFilterName.cpp  CSearchEngine.cpp  CSearchQuery.cpp  CStreamRegexSearcher.cpp  CStreamSearcher.cpp
tests/: CMakeLists.txt
tests/src/: test_CStreamSearcher.cpp
